# pyconf-hyd-2026-trustworthy-llm-agents

./: .env.example  .gitignore  DEMO_PLAN.md  DEMO_PLAYBOOK.md  GUARDRAILS.md  README.md  docker-compose.yml  langgraph.json  main.py  notebook_evaluation_frameworks.ipynb  pyproject.toml  settings.yaml  workshop.ipynb
agent-chat-ui/: .env  .gitignore
docker/: Dockerfile.evals  Dockerfile.langgraph
evals/: conftest.py  golden_dataset.json  test_custom_quality.py  test_escalation.py  test_faithfulness.py  test_multiturn.py  test_ragas.py  test_routing.py  test_security.py
support_swarm/: __init__.py  enums.py  guardrails.py  observability.py  workflow.py
support_swarm/config/: __init__.py  azure_openai.py  loader.py  openai.py  settings.py
support_swarm/db/: engine.py  seed.py
support_swarm/db/models/: __init__.py  customer.py  email_log.py  knowledge_article.py  order.py  refund.py
support_swarm/declarative/: __init__.py  models.py
support_swarm/declarative/agents/: escalation_agent.yaml  policy_advisor.yaml  prompt_cacher.yaml  router.yaml  shop_assist.yaml
support_swarm/model_client/: __init__.py  chat_client.py  embedding_client.py
support_swarm/tools/: __init__.py  shared.py  shop_assist_tools.py
